--- a/projects/main/src/app/pages/score-board-pages/score-board-page/score-board-page.component.html
+++ b/projects/main/src/app/pages/score-board-pages/score-board-page/score-board-page.component.html
@@ -23,7 +23,7 @@
     <div class="border p-2 flex mb-2 border column" *ngFor="let board of scoreboards; let i = index;">
         <div class="mb-2">
             <span class="text-white bg-primary fw-700 border px-1 mb-2">{{board.score > 0 ? i + 1 : '-'}}</span>
-            {{board.user.name}} ({{board.user.department}})
+            {{board.user.name}} ({{board.user.university}} {{board.user.department}})
         </div>
         <div class="flex justify-center flex-wrap">
             <div class="total-score p-1 border fw-900 flex column justify-center align-center">
