--- a/projects/main/src/app/pages/contest-pages/components/contestants-list/contestants-list.component.html
+++ b/projects/main/src/app/pages/contest-pages/components/contestants-list/contestants-list.component.html
@@ -27,8 +27,13 @@
             <td mat-cell *matCellDef="let row">{{row.name | hideName: row._id: contestWriter}}</td>
         </ng-container>
 
+        <ng-container matColumnDef="university">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>소속대학</th>
+          <td mat-cell *matCellDef="let row">{{row.university}}</td>
+        </ng-container>
+
         <ng-container matColumnDef="department">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>소속</th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>소속학과</th>
             <td mat-cell *matCellDef="let row">{{row.department}}</td>
         </ng-container>
 
