--- a/projects/main/src/app/shared/components/header/header.component.html
+++ b/projects/main/src/app/shared/components/header/header.component.html
@@ -18,7 +18,7 @@
        routerLink="/account/login"
        *ngIf="!auth.loggedIn">로그인</a>
     <span class="font-s mobile-d-none" *ngIf="auth.loggedIn">
-        {{auth.me?.university}} {{auth.me?.department}} {{auth.me?.name}}님 로그인 중
+        <span *ngIf="isStudent">{{auth.me?.university}}</span> {{auth.me?.department}} {{auth.me?.name}}님 로그인 중
         <a class="cursor pointer ms-2"
            (click)="logout()">로그아웃</a>
     </span>
