Fix: 페이지 별 마이너 업데이트, 모델 수정

--- a/projects/main/src/app/pages/account-pages/login-page/login-page.component.html
+++ b/projects/main/src/app/pages/account-pages/login-page/login-page.component.html
@@ -47,6 +47,6 @@
                 <a class="text-primary" [href]="joinPageUrl" target="_blank">회원가입</a>
             </span>
         </div>
-        <button type="submit" class="grow-1 no-border-radius" mat-flat-button color="primary">로그인</button>
+        <button type="submit" class="grow-1" mat-flat-button color="primary">로그인</button>
     </form>
 </div>
