--- a/projects/main/src/app/pages/main-page/components/login-form/login-form.component.html
+++ b/projects/main/src/app/pages/main-page/components/login-form/login-form.component.html
@@ -35,5 +35,5 @@
             <a class="text-primary" [href]="joinPageUrl" target="_blank">회원가입</a>
         </span>
     </div>
-    <button class="w-100 no-border-radius" mat-flat-button color="primary">로그인</button>
+    <button class="w-100" mat-flat-button color="primary">로그인</button>
 </form>
