--- a/projects/main/src/app/pages/contest-pages/components/contestants-list/contestants-list.component.html
+++ b/projects/main/src/app/pages/contest-pages/components/contestants-list/contestants-list.component.html
@@ -3,7 +3,7 @@
         <span>신청자 수: 총 <span class="text-warn">{{contestants.length | number}}</span>명</span>
         <button *ngIf="(auth.isOperator$ | async) || (auth.me$ | async)?._id === contestWriter"
                 type="button"
-                class="text-white no-border-radius font-s"
+                class="text-white font-s"
                 mat-flat-button color="accent"
                 (click)="downloadExcel()">
             <i class="las la-file-excel me-1"></i>다운로드
