--- a/projects/main/src/app/pages/contest-pages/contest-detail-page/contest-detail-page.component.html
+++ b/projects/main/src/app/pages/contest-pages/contest-detail-page/contest-detail-page.component.html
@@ -23,7 +23,7 @@
   <div class="flex justify-end" *ngIf="isContestant$ | async; else notContestantTemplate">
     <a
       *ngIf="isTestPeriod || isAfterTestPeriod"
-      class="text-white me-2 no-border-radius"
+      class="text-white me-2"
       mat-flat-button
       color="primary"
       routerLink="/scoreboard"
@@ -35,7 +35,6 @@
       *ngIf="isBeforeTestPeriod"
       (click)="unenroll()"
       type="button"
-      class="no-border-radius"
       mat-flat-button
       color="warn"
     >
@@ -43,7 +42,6 @@
     </button>
     <a
       *ngIf="isTestPeriod"
-      class="no-border-radius"
       mat-flat-button
       color="accent"
       style="color: white"
@@ -56,7 +54,7 @@
   <div *ngIf="isWriter$ | async" class="flex justify-end">
     <button
       *ngIf="(isWriter$ | async) && (isTestPeriod || isAfterTestPeriod)"
-      class="text-white me-2 no-border-radius"
+      class="text-white me-2"
       mat-flat-button
       color="primary"
       routerLink="/scoreboard"
@@ -65,7 +63,13 @@
       <i class="las la-chalkboard"></i><span class="ms-2 mobile-d-none">스코어보드</span>
     </button>
     <button
-      class="text-white me-2 no-border-radius"
+      class="text-white me-2"
+      mat-flat-button color="accent"
+      [routerLink]="['/contest', contest?._id, 'submits']">
+      <i class="las la-edit"></i><span class="ms-2 mobile-d-none">대회 제출 목록</span>
+    </button>
+    <button
+      class="text-white me-2"
       mat-flat-button
       color="accent"
       [routerLink]="['/contest/edit', contest?._id]"
@@ -73,7 +77,7 @@
       <i class="las la-edit"></i><span class="ms-2 mobile-d-none">대회 수정</span>
     </button>
     <button
-      class="text-white me-2 no-border-radius"
+      class="text-white me-2"
       *ngIf="isBeforeTestPeriod"
       mat-flat-button
       color="primary"
@@ -82,7 +86,7 @@
       <i class="las la-folder-plus"></i><span class="ms-2 mobile-d-none">문제 등록/수정</span>
     </button>
     <button
-      class="text-white me-2 no-border-radius"
+      class="text-white me-2"
       *ngIf="isTestPeriod"
       mat-flat-button
       color="primary"
@@ -90,7 +94,7 @@
     >
       <i class="las la-folder-plus"></i><span class="ms-2 mobile-d-none">문제 수정</span>
     </button>
-    <button type="button" class="text-white no-border-radius" (click)="removeContest()" mat-flat-button color="warn">
+    <button type="button" class="text-white" (click)="removeContest()" mat-flat-button color="warn">
       <i class="las la-trash-alt"></i><span class="ms-2 mobile-d-none">대회 삭제</span>
     </button>
   </div>
@@ -99,7 +103,6 @@
     <div class="flex justify-end">
       <button
         *ngIf="isApplyingPeriod && !(isWriter$ | async)"
-        class="no-border-radius"
         (click)="enroll()"
         mat-flat-button
         color="primary"
@@ -108,7 +111,7 @@
       </button>
       <a
         *ngIf="(isTestPeriod && !(isWriter$ | async)) || (isAfterTestPeriod && !(isWriter$ | async))"
-        class="text-white no-border-radius"
+        class="text-white"
         mat-flat-button
         color="primary"
         routerLink="/scoreboard"
