--- a/projects/main/src/app/pages/problem-pages/problem-form-page/problem-form-page.component.html
+++ b/projects/main/src/app/pages/problem-pages/problem-form-page/problem-form-page.component.html
@@ -129,8 +129,8 @@
     </div>
 
     <div class="flex justify-end">
-      <button type="button" mat-flat-button class="block no-border-radius me-2" (click)="cancel()">취소</button>
-      <button mat-flat-button class="block no-border-radius" color="primary">{{ modifying ? '수정' : '등록' }}</button>
+      <button type="button" mat-flat-button class="block me-2" (click)="cancel()">취소</button>
+      <button mat-flat-button class="block" color="primary">{{ modifying ? '수정' : '등록' }}</button>
     </div>
   </form>
 </div>
