--- a/projects/main/src/app/pages/submit-pages/submit-detail-page/submit-detail-page.component.html
+++ b/projects/main/src/app/pages/submit-pages/submit-detail-page/submit-detail-page.component.html
@@ -2,7 +2,7 @@
   <h2 class="mb-2 page-title"></h2>
   <span class="flex border-bottom pb-2 border-top pt-2 mobile-column">
 
-    <span class="font-s me-auto">
+    <span class="font-s me-auto px-2">
       제출시간: {{submit.createdAt | date: " yyyy년 MM월 dd일 hh:mm:ss"}}
       <span class="fw-700">
         <span class="text-accent fw-700">
@@ -14,26 +14,27 @@
       <span></span>
     </span>
 
-    <span *ngIf="submit.parentType === 'Assignment'">
-      <span class="font-s me-2">과목명: {{submit.parent.course}}</span>
-      <span class="font-s me-2">과제명: {{submit.parent.title}}</span>
+    <span *ngIf="submit.parentType === 'Assignment'" class="px-2">
+      <span class="font-s me-2">과목명: {{submit.parentId.course}}</span>
+      <span class="font-s me-2">과제명: {{submit.parentId.title}}</span>
       <span class="font-s me-2">문제명: {{submit.problem.title}}</span>
-      <span class="font-s">교수명: {{submit.parent.writer.name}}</span>
+      <span class="font-s">교수명: {{submit.parentId.writer.name}}</span>
     </span>
 
-    <span *ngIf="submit.parentType === 'Contest'">
-      <span class="font-s me-2">대회명: {{submit.parent.title}}</span>
+    <span *ngIf="submit.parentType === 'Contest'" class="px-2">
+      <span class="font-s me-2">대회명: {{submit.parentId.title}}</span>
       <span class="font-s me-2">문제명: {{submit.problem.title}}</span>
-      <span class="font-s">작성자: {{submit.parent.writer.name}}</span>
+      <span class="font-s me-2">작성자: {{submit.parentId.writer.name}}</span>
+      <span class="font-s">제출자: {{submit.user.university}} {{submit.user.department}} {{submit.user.name}}</span>
     </span>
 
   </span>
 
   <div class="py-2 border-bottom mb-2">
 
-    <div class="border-box min-h-150 fw-700 "
+    <div class="border-box min-h-150 fw-700 px-2"
         style="white-space: pre-wrap;">
-        {{submit.code}}
+        {{submit.code || '결과가 없습니다'}}
     </div>
   </div>
   <span class="flex justify-between border-bottom pb-2" style="font-weight: bold;">
