--- a/projects/main/src/app/shared/components/mobile-navigation/mobile-navigation.component.html
+++ b/projects/main/src/app/shared/components/mobile-navigation/mobile-navigation.component.html
@@ -1,32 +1,38 @@
 <div class="main-container flex align-center">
-    <a class="flex brand-wrapper grow-0" (click)="movePage('/')">
-        <img class="brand-image me-1" src="assets/images/logo.png" alt="logo image"/>
-        <div class="brand-name flex align-center">
-            <span class="text-primary font-xl fw-900 mobile-d-none me-1">SW</span><span
-            class="font-l fw-900 text-accent"> ONLINE JUDGE</span>
-        </div>
-    </a>
-    <div class="ms-auto">
-        <button type="button"
-                mat-icon-button
-                (click)="close()">
-            <mat-icon>close</mat-icon>
-        </button>
+  <a class="flex brand-wrapper grow-0" (click)="movePage('/')">
+    <img class="brand-image me-1" src="assets/images/logo.png" alt="logo image"/>
+    <div class="brand-name flex align-center">
+      <span class="text-primary font-xl fw-900 mobile-d-none me-1">SW</span><span
+      class="font-l fw-900 text-accent"> ONLINE JUDGE</span>
     </div>
+  </a>
+  <div class="ms-auto">
+    <button type="button"
+            mat-icon-button
+            (click)="close()">
+      <mat-icon>close</mat-icon>
+    </button>
+  </div>
 </div>
 <nav class="nav-body flex column justify-center align-center" #navBody>
-    <span class="mb-6 font-s" *ngIf="auth.loggedIn; else loginTemplate">
-        {{auth.me?.name}}님 로그인 중
-        <a class="cursor pointer ms-2"
-           (click)="logout()">로그아웃</a>
+    <span class="mb-6 font-l flex column justify-center align-center" *ngIf="auth.loggedIn; else loginTemplate">
+        <span>{{auth.me?.university}}</span>
+        <span>{{auth.me?.department}}</span>
+        <span>{{auth.me?.name}}님 로그인 중</span>
+        <button
+          type="button"
+          class="cursor pointer mt-2 mat-warn"
+          mat-flat-button
+          (click)="logout()">로그아웃</button>
     </span>
-    <ng-template #loginTemplate>
-        <a class="cursor pointer"
-           (click)="movePage('/account/login')">로그인</a>
-    </ng-template>
-    <ng-container *ngFor="let menu of menus">
-        <a class="cursor pointer"
-           *ngIf="!menu.condition$ || (menu.condition$ | async)"
-           (click)="movePage(menu.link)">{{menu.name}}</a>
-    </ng-container>
+
+  <ng-template #loginTemplate>
+    <a class="cursor pointer font-l"
+       (click)="movePage('/account/login')">로그인</a>
+  </ng-template>
+  <ng-container *ngFor="let menu of menus">
+    <a class="cursor pointer my-2 font-l"
+       *ngIf="!menu.condition$ || (menu.condition$ | async)"
+       (click)="movePage(menu.link)">{{menu.name}}</a>
+  </ng-container>
 </nav>
