--- a/projects/main/src/app/pages/practice-pages/my-practice-submit-list/my-practice-submit-list.component.html
+++ b/projects/main/src/app/pages/practice-pages/my-practice-submit-list/my-practice-submit-list.component.html
@@ -8,36 +8,35 @@
         type="button"
         class="mat-primary"
         mat-flat-button
-        [routerLink]="['/problem/detail', problem?._id]"
-        [queryParams]="queryParams"
-        >문제로 돌아가기</button
+        [routerLink]="['/practice/detail', problem?._id]"
+      >문제로 돌아가기</button
       >
     </div>
-<!--    <div>-->
-<!--      <span class="me-2" *ngIf="contest">대회: {{ contest?.title }}</span>-->
-<!--      <span class="me-2" *ngIf="assignment">과제: {{ assignment?.title }}</span>-->
-<!--      <span class="text-warn fw-900" *ngIf="(contest?.testPeriod | periodRange | async) === 0">-->
-<!--        ({{ contest?.testPeriod.end | restTime | async }} 후 종료)-->
-<!--      </span>-->
-<!--      <span class="text-warn fw-900" *ngIf="(assignment?.testPeriod | periodRange | async) === 0">-->
-<!--        ({{ assignment?.testPeriod.end | restTime | async }} 후 종료)-->
-<!--      </span>-->
-<!--    </div>-->
+    <!--    <div>-->
+    <!--      <span class="me-2" *ngIf="contest">대회: {{ contest?.title }}</span>-->
+    <!--      <span class="me-2" *ngIf="assignment">과제: {{ assignment?.title }}</span>-->
+    <!--      <span class="text-warn fw-900" *ngIf="(contest?.testPeriod | periodRange | async) === 0">-->
+    <!--        ({{ contest?.testPeriod.end | restTime | async }} 후 종료)-->
+    <!--      </span>-->
+    <!--      <span class="text-warn fw-900" *ngIf="(assignment?.testPeriod | periodRange | async) === 0">-->
+    <!--        ({{ assignment?.testPeriod.end | restTime | async }} 후 종료)-->
+    <!--      </span>-->
+    <!--    </div>-->
   </div>
 
   <div class="text-50 my-2">제출 내역을 누르면 상세정보를 볼 수 있습니다.</div>
 
-  <div class="flex p-2 border" *ngIf="submits.length === 0">
+  <div class="flex p-2 border" *ngIf="!submits">
     <span>제출 내역이 없습니다.</span>
   </div>
 
   <div class="flex p-2 border cursor pointer"
-      [routerLink]="['/submit/detail', submit._id]"
-      *ngFor="let submit of submits">
+       [routerLink]="['/practice/submit', submit._id, 'detail']"
+       *ngFor="let submit of submits">
     <span *ngIf="!submit.result" class="text-accent me-auto">채점 중</span>
     <ng-container *ngIf="submit.result">
       <span class="me-2" [class.text-warn]="submit.result.type !== 'done'"
-        [class.text-primary]="submit.result.type === 'done'">
+            [class.text-primary]="submit.result.type === 'done'">
         {{ submit.result.type | submitResultType }}
       </span>
       <span class="me-2"> {{ submit.result.time }}ms </span>
