--- a/projects/main/src/app/pages/submit-pages/submit-detail-page/submit-detail-page.component.html
+++ b/projects/main/src/app/pages/submit-pages/submit-detail-page/submit-detail-page.component.html
@@ -31,12 +31,11 @@
   </span>
 
   <div class="py-2 border-bottom mb-2">
-
-    <div class="border-box min-h-150 fw-700 px-2"
-        style="white-space: pre-wrap;">
-        {{submit.code || '결과가 없습니다'}}
+    <div [innerHTML]="submit.code" class="border-box min-h-150 fw-700 px-2"
+         style="white-space: pre-wrap;">
     </div>
   </div>
+
   <span class="flex justify-between border-bottom pb-2" style="font-weight: bold;">
     <span class="px-2 border-right"
         [class.text-warn]="submit?.result?.type !== 'done'"
