Add: 제출목록 보기 권한 수정

--- a/judger-frontend/projects/main/src/app/pages/assignment-pages/assignment-detail-page/assignment-detail-page.component.html
+++ b/judger-frontend/projects/main/src/app/pages/assignment-pages/assignment-detail-page/assignment-detail-page.component.html
@@ -50,7 +50,7 @@
     </button>
   </div>
 
-  <div *ngIf="isWriter$" class="flex justify-end">
+  <div *ngIf="isWriter$ || auth.hasJudgePermission" class="flex justify-end">
     <button
       class="text-white me-2"
       mat-flat-button
