Fix: 마이페이지 코드 제출내역 수정

--- a/judger-frontend/projects/main/src/app/pages/main-page/components/assignment-manual-dialog/assignment-manual-dialog.component.html
+++ b/judger-frontend/projects/main/src/app/pages/main-page/components/assignment-manual-dialog/assignment-manual-dialog.component.html
@@ -15,11 +15,13 @@
       </div>
       <h4>위 이미지 화면 하단의 과제참여 버튼을 누르면 참가가 됩니다.</h4>
       <br>
+      <br>
       <h4>만약 비밀번호를 입력하는 창이 나올 시 사전에 알려준 비밀번호를 입력하면 됩니다.</h4>
       <div class="image-container">
         <img src="/assets/images/manual/password.png" alt="비밀번호 입력창" id="password">
         <label for="password" class="image-label">< 비밀번호 입력창 ></label>
       </div>
+      <br>
       <br>
       <h4>과제참여가 완료가 되면 아래 이미지처럼 화면이 나옵니다.</h4>
       <div class="image-container">
@@ -38,6 +40,7 @@
         <label for="problems" class="image-label">< 과제 ></label>
       </div>
       <br>
+      <br>
       <h4>시간 제한과 메모리 제한을 확인해 주시고 문제의 설명을 자세히 보고 코드로 구현하시면 됩니다.</h4>
       <h4>화면 상단에 제출현황을 눌러 제출한 코드 결과를 확인해볼 수 있고, 소스제출 버튼을 눌러 소스제출 페이지로 이동할 수 있습니다.</h4>
       <div class="image-container">
@@ -51,20 +54,29 @@
     <hr class="my-2">
     <div class="details-container">
       <h4>해당 젓저 시스템은 소스 파일을 넣을 수 있게 되있습니다. 아래 이미지처럼 IDE에 적은 코드를 저장을 시켜줍니다.</h4>
-      <h4>※ 입력 언어가 java일 경우 클래스 이름의 Main, 파일 이름을 꼭 Main.java로 해주셔야 됩니다.</h4>
       <div class="image-container">
         <img src="/assets/images/manual/problem-code-ex.png" alt="코드 예시" id="problem-code-ex">
         <label for="problem-code-ex" class="image-label">< 코드 예시 ></label>
       </div>
       <br>
+      <br>
       <h4>저장 완료를 하면 문제 제출 페이지에서 문제풀이한 언어를 선택을 해주고 소스 파일 선택 버튼을 눌러 저장한 파일을 입력해주면 됩니다.</h4>
+      <h5 class="text-ex">※ 입력 언어에 맞는 파일형식으로 해야 합니다. 예를 들어 java면 .java 형식을 사용해야합니다.</h5>
+      <h5 class="text-ex">※ 입력 언어가 java일 경우 클래스 이름을 Main으로 해주셔야 됩니다.</h5>
+      <div class="image-container">
+        <img src="/assets/images/manual/submit-page.png" alt="제출 화면" id="submit-page">
+        <label for="submit-page" class="image-label">< 제출 화면 ></label>
+      </div>
+      <br>
+      <br>
       <h4>그 후 제출 버튼을 누르면 아래와 같은 결과 화면을 확인해볼 수 있습니다.</h4>
-      <h4>※ 채점을 실행하는데 몇 초 걸릴 수 있습니다.</h4>
-      <h4>※ 입출력 예시가 모두 같아도 숨겨진 입출력 예시가 있어 오답이 될 수 있습니다.</h4>
+      <h5 class="text-ex">※ 채점을 실행하는데 몇 초 걸릴 수 있습니다.</h5>
+      <h5 class="text-ex">※ 입출력 예시가 모두 같아도 숨겨진 입출력 예시가 있어 오답이 될 수 있습니다.</h5>
       <div class="image-container">
         <img src="/assets/images/manual/submit-results.png" alt="전체 제출내역" id="submit-results">
         <label for="submit-results" class="image-label">< 전체 제출내역 ></label>
       </div>
+      <br>
       <br>
       <h4>체점내역을 자세히 보려면 제출내역을 누르면 아래와 같은 화면을 확인해볼 수 있습니다.</h4>
       <div class="image-container">
