Fix: 문제 보기 권한 변경

--- a/judger-frontend/projects/main/src/app/pages/assignment-pages/assignment-detail-page/assignment-detail-page.component.html
+++ b/judger-frontend/projects/main/src/app/pages/assignment-pages/assignment-detail-page/assignment-detail-page.component.html
@@ -68,6 +68,7 @@
     </button>
 
     <button
+      *ngIf="isWriter$ || isAfterTestPeriod"
       class="text-white me-2"
       mat-flat-button
       color="primary"
