--- a/judger-frontend/projects/main/src/app/pages/problem-pages/problem-detail-page/problem-detail-page.component.scss
+++ b/judger-frontend/projects/main/src/app/pages/problem-pages/problem-detail-page/problem-detail-page.component.scss
@@ -2,3 +2,23 @@
   top: -100px;
   z-index: 2;
 }
+.example-files ul {
+  list-style-type: none; /* 기본 점 스타일 제거 */
+  padding: 0;
+  margin: 0;
+}
+
+.example-files li {
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc; /* 각 파일 항목에 경계선 추가 */
+  border-radius: 4px;
+}
+
+.example-files button {
+  width: 100%; /* 버튼을 li 크기만큼 넓게 설정 */
+  text-align: left;
+  padding: 10px;
+  background-color: #6d6d6dab;
+  border: 1px solid #ccc;
+}
